# dbx-bundle

./: .gitignore  INSTALL.md  README.md  commands  dbx-bundle.sh  dbx.ps1  dbx.sh  gitx.yaml  install-remote.ps1  install-remote.sh  install.ps1  install.sh  install_deps.ps1  install_deps.sh  pyproject.toml  set_databricks_cli.ps1  set_databricks_cli.sh  yaml_comments_preprocessor.py
.github/workflows/: release.yml
scripts/: create_release_artifacts.sh  sql_param_interpolator.py  yaml_comments_preprocessor.py
tests/: conftest.py  test_sql_param_interpolator.py  test_yaml_comments_preprocessor.py
